crates/pixi_manifest/src/snapshots/pixi__project__manifest__tests__pypy_options_project_and_default_feature.snap
---
source: src/project/manifest/mod.rs
expression: manifest.project.pypi_options.clone().unwrap()
---
index-url: ~
extra-index-urls:
  - "https://pypi.org/simple2"
find-links: ~
